fix: spellhandler swago docs
