# docs/swagger.json
@@ -11,10 +11,7 @@
     "paths": {
         "/api/creature": {
             "get": {
-                "description": "Lista todas as crituras por nome, descrição, ataque, defesa e magia",
-                "consumes": [
-                    "application/json"
-                ],
+                "description": "Lista todas as crituras com filtros opcionais e paginação",
                 "produces": [
                     "application/json"
                 ],
@@ -30,33 +27,45 @@
                         "in": "query"
                     },
                     {
-                        "type": "string",
-                        "description": "ataque da criatura",
+                        "type": "integer",
+                        "description": "Ataque",
                         "name": "attack",
                         "in": "query"
                     },
                     {
-                        "type": "string",
-                        "description": "defesa da criatura",
+                        "type": "integer",
+                        "description": "Defesa",
                         "name": "defence",
                         "in": "query"
                     },
                     {
                         "type": "string",
-                        "description": "sort",
+                        "description": "Campo de ordenação (name, attack)",
                         "name": "sort",
                         "in": "query"
                     },
                     {
                         "type": "string",
-                        "description": "order",
+                        "description": "asc ou desc",
                         "name": "order",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Pagina",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "limite",
+                        "name": "limit",
                         "in": "query"
                     }
                 ],
                 "responses": {
-                    "201": {
-                        "description": "Created",
+                    "200": {
+                        "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/api.Response"
                         }
@@ -70,7 +79,7 @@
                 }
             },
             "post": {
-                "description": "Cria uma criatura com nome, descrição, ataque, defesa, HP e magias que pode ensinar",
+                "description": "Cria uma nova criatura",
                 "consumes": [
                     "application/json"
                 ],
@@ -93,8 +102,8 @@
                     }
                 ],
                 "responses": {
-                    "201": {
-                        "description": "Created",
+                    "200": {
+                        "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/api.Response"
                         }
@@ -110,23 +119,20 @@
         },
         "/api/creature/{id}": {
             "get": {
-                "description": "Lista criaturas por ID",
-                "consumes": [
-                    "application/json"
-                ],
+                "description": "Retorna uma criaturas especifica",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "creatures"
                 ],
-                "summary": "Lista criaturas por ID",
+                "summary": "Busca criatura por ID",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "id da criatura",
+                        "description": "ID da criatura",
                         "name": "id",
-                        "in": "query"
+                        "in": "path"
                     }
                 ],
                 "responses": {
@@ -138,6 +144,12 @@
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api.Response"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/api.Response"
                         }
@@ -145,7 +157,7 @@
                 }
             },
             "put": {
-                "description": "Atualiza uma magia com nome, descrição, ataque, defesa, hp e magia",
+                "description": "Atualiza dados da criatura",
                 "consumes": [
                     "application/json"
                 ],
@@ -155,24 +167,39 @@
                 "tags": [
                     "creatures"
                 ],
-                "summary": "Atualiza os dados da criatura",
+                "summary": "Atualiza criatura",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "id da criatura",
+                        "description": "ID da criatura",
                         "name": "id",
-                        "in": "query"
+                        "in": "path"
+                    },
+                    {
+                        "description": "Dados Atualizados",
+                        "name": "creature",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/api.CreatureModel"
+                        }
                     }
                 ],
                 "responses": {
-                    "201": {
-                        "description": "Created",
+                    "200": {
+                        "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/api.Response"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api.Response"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/api.Response"
                         }
@@ -181,9 +208,6 @@
             },
             "delete": {
                 "description": "Deleta uma criatura do grimorio",
-                "consumes": [
-                    "application/json"
-                ],
                 "produces": [
                     "application/json"
                 ],
@@ -194,9 +218,9 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "id da criatura",
+                        "description": "ID da criatura",
                         "name": "id",
-                        "in": "query"
+                        "in": "path"
                     }
                 ],
                 "responses": {
@@ -206,8 +230,8 @@
                             "$ref": "#/definitions/api.Response"
                         }
                     },
-                    "400": {
-                        "description": "Bad Request",
+                    "404": {
+                        "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/api.Response"
                         }
@@ -217,10 +241,7 @@
         },
         "/api/creature/{id}/teach/{spellId}": {
             "post": {
-                "description": "Criatura ensina uma magia",
-                "consumes": [
-                    "application/json"
-                ],
+                "description": "Associa uma magina a uma Criatura",
                 "produces": [
                     "application/json"
                 ],
@@ -231,20 +252,20 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "id da criatura",
-                        "name": "id_creature",
-                        "in": "query"
+                        "description": "ID da criatura",
+                        "name": "id",
+                        "in": "path"
                     },
                     {
                         "type": "string",
-                        "description": "id da magia",
-                        "name": "id_spell",
-                        "in": "query"
+                        "description": "ID da magia",
+                        "name": "spellId",
+                        "in": "path"
                     }
                 ],
                 "responses": {
-                    "201": {
-                        "description": "Created",
+                    "200": {
+                        "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/api.Response"
                         }
@@ -281,6 +302,18 @@
                         "in": "query"
                     },
                     {
+                        "type": "string",
+                        "description": "name ou mana_cost",
+                        "name": "sort",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "asc ou desc",
+                        "name": "order",
+                        "in": "query"
+                    },
+                    {
                         "type": "integer",
                         "description": "Página",
                         "name": "page",
@@ -299,11 +332,17 @@
                         "schema": {
                             "$ref": "#/definitions/api.Response"
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api.Response"
+                        }
                     }
                 }
             },
             "post": {
-                "description": "Cria uma magia com nome, descrição, elemento e custo de mana",
+                "description": "Cria uma magia",
                 "consumes": [
                     "application/json"
                 ],
@@ -343,6 +382,7 @@
         },
         "/api/spell/element/{element}": {
             "get": {
+                "description": "Lista magias por elemento",
                 "produces": [
                     "application/json"
                 ],
@@ -355,12 +395,18 @@
                         "type": "string",
                         "description": "Elemento da magia",
                         "name": "element",
-                        "in": "query"
+                        "in": "path"
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
                         "schema": {
                             "$ref": "#/definitions/api.Response"
                         }
@@ -376,13 +422,13 @@
                 "tags": [
                     "spells"
                 ],
-                "summary": "Lista magias com filtros por ID",
+                "summary": "Busca magias por ID",
                 "parameters": [
                     {
                         "type": "integer",
                         "description": "ID da magia",
                         "name": "id",
-                        "in": "query"
+                        "in": "path"
                     }
                 ],
                 "responses": {
@@ -391,10 +437,26 @@
                         "schema": {
                             "$ref": "#/definitions/api.Response"
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api.Response"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/api.Response"
+                        }
                     }
                 }
             },
             "put": {
+                "description": "Atualiza dados da magia",
+                "consumes": [
+                    "application/json"
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -407,7 +469,17 @@
                         "type": "string",
                         "description": "ID da magia",
                         "name": "id",
-                        "in": "query"
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Dados Atualizados",
+                        "name": "spell",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/api.SpellModel"
+                        }
                     }
                 ],
                 "responses": {
@@ -416,10 +488,23 @@
                         "schema": {
                             "$ref": "#/definitions/api.Response"
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api.Response"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/api.Response"
+                        }
                     }
                 }
             },
             "delete": {
+                "description": "Deleta magia do grimorio",
                 "produces": [
                     "application/json"
                 ],
@@ -438,6 +523,12 @@
                 "responses": {
                     "200": {
                         "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.Response"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/api.Response"
                         }
